# ptyroom

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  package-lock.json  package.json  render-cast.sh  tsconfig.json
.github/workflows/: ci.yml
crates/ptyrecord/: COMPAT.md  Cargo.toml  INVARIANTS.md  README.md
crates/ptyrecord/src/: lib.rs  main.rs
crates/ptyrecord/tests/: invariants.rs  output_cleanliness.rs
crates/ptyrender/: Cargo.toml  README.md
crates/ptyrender/assets/fonts/: LICENSE-DejaVu.txt
crates/ptyrender/examples/: render_trace.rs
crates/ptyrender/src/: encode.rs  frame.rs  inspect.rs  lib.rs  main.rs  paint.rs  pipeline_cmd.rs  render.rs  render_cli.rs  verify.rs  verify_cmd.rs  witness.rs
crates/ptyrender/src/frame_replay/: mod.rs  osc_tracker.rs
crates/ptyroom/: Cargo.toml  README.md
crates/ptyroom/src/: lib.rs  main.rs
crates/ptyroom/tests/: ptyroom_cli.rs  ptyroom_transport_cli.rs  public_surface.rs
crates/ptyroom/tests/common/: mod.rs
crates/ptytrace/: Cargo.toml  README.md
crates/ptytrace/examples/: generic_shell.rs
crates/ptytrace/src/: attestation.rs  attestation_io.rs  color.rs  contract.rs  lib.rs  observer.rs  recording.rs  trace.rs
crates/ptytrace/src/pty/: connect.rs  drainer.rs  input_router.rs  live.rs  mod.rs  op.rs  osc.rs  process.rs  room_protocol.rs  share.rs  status_bar.rs  terminal_io.rs  terminal_state.rs  viewport.rs
crates/ptytrace/src/pty/connect/: control.rs  drain_stdin.rs  drain_stream.rs  mod.rs  output.rs  poll.rs  resize.rs  stream.rs  terminal.rs
crates/ptytrace/src/pty/share/: client.rs  ctl.rs  host_viewport.rs  mod.rs  pending.rs  poll_loop.rs  pty_output.rs  sizing.rs
crates/ptytrace/src/script/: exec.rs  lex.rs  parse.rs
crates/ptytrace/tests/: ptytrace_stress.rs
crates/ptyweb/: Cargo.toml  INTEGRATION.md  README.md
crates/ptyweb/src/: lib.rs  main.rs
crates/ptyweb/src/viewer/: index.html  viewer.js  xterm.css
docs/: crate-architecture.md  ctl-protocol.md  determinism-audit.md  provenance-anchors.md  ptyrecord-format.md  ptyroom-protocol.md  ptyshare-protocol.md  publishing.md  scene-grammar.md  script-grammar.md  shared-terminals.md
examples/: generic_shell.rs  render_cast.rs  render_trace.rs
goldens/: cd_hook.json  cli.json  custom_theme.json  demo_full.json  picker.json
recorder/: driver.py
renderer/: encode.py  paint.py  snapshot.js  snapshot.ts
scenes/: bench_churn.rs  bench_subloops.rs  bench_tiny.rs  cd_hook.rs  cli.rs  custom_theme.rs  demo_full.py  demo_full.rs  picker.rs  picker_timeline.rs  smoke.py  smoke.rs
scripts/: bless_goldens.sh  characterize.sh  publish-crates.sh  render_feature.sh  smoke-local.sh  verify_goldens.sh
scripts/lib/: pipeline.sh
src/: attestation.rs  cast.rs  color.rs  contract.rs  contracts.rs  encode.rs  frame.rs  inspect.rs  lib.rs  observer.rs  paint.rs  proof.rs  proof_timeline.rs  ptyrecord.rs  raw_log.rs  receipt.rs  recording.rs  render.rs  scenes.rs  snapshot.rs  spec.rs  timeline.rs  trace.rs  verified_trace.rs  verify.rs  witness.rs
src/frame_replay/: mod.rs  osc_tracker.rs
src/pty/: connect.rs  live.rs  mod.rs  process.rs  room_protocol.rs  share.rs  terminal_state.rs
src/pty/connect/: output.rs
src/recorder/: drainer.rs  keys.rs  live.rs  mod.rs  osc.rs  pty.rs
src/scene/: ast.rs  exec.rs  mod.rs  parse.rs
src/script/: ast.rs  exec.rs  lex.rs  mod.rs  parse.rs
src/snapshot_replay/: mod.rs  osc_tracker.rs
src/tracer/: drainer.rs  keys.rs  live.rs  mod.rs
tests/: ptyroom_transport_cli.rs  ptyshare_cli.rs  ptytrace_stress.rs  public_surface.rs  recorder_stress.rs  termroom_cli.rs  tracer_stress.rs
tests/fixtures/: stress_child.rs  stress_child.sh
tint-recorder-scenes/: Cargo.toml
tint-recorder-scenes/scenes/: bench_churn.rs  bench_subloops.rs  bench_tiny.rs  cd_hook.rs  cli.rs  custom_theme.rs  demo_full.rs  picker.rs  picker_timeline.rs  smoke.rs
tint-recorder-scenes/src/: contracts.rs  lib.rs  pipeline_test.rs  scenes.rs
tint-scenes/: Cargo.toml
tint-scenes/scenes/: bench_churn.rs  bench_subloops.rs  bench_tiny.rs  cd_hook.rs  cli.rs  custom_theme.rs  demo_full.rs  picker.rs  picker_timeline.rs  smoke.rs
tint-scenes/src/: contracts.rs  lib.rs  pipeline_test.rs  scenes.rs  timeline.rs
tools/: inspect.py  scene_contracts.py  types.py  verify.py
