[workspace]
members = [
    "crates/ptyrecord",
    "crates/ptyrender",
    "crates/ptyroom",
    "crates/ptytrace",
    "crates/ptyweb",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
homepage = "https://github.com/corygabrielsen/ptyroom"
repository = "https://github.com/corygabrielsen/ptyroom"
readme = "README.md"
keywords = ["terminal", "pty", "trace", "asciinema", "cli"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
ab_glyph = "0.2"
anyhow = "1"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
memchr = "2"
nix = { version = "0.31", features = ["poll", "term", "user"] }
portable-pty = "0.9.0"
ptyrecord = { version = "0.1.0", path = "crates/ptyrecord" }
ptyrender = { version = "0.1.0", path = "crates/ptyrender" }
ptyroom = { version = "0.1.0", path = "crates/ptyroom" }
ptytrace = { version = "0.1.0", path = "crates/ptytrace" }
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
tempfile = "3"
vt100 = "0.16.2"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
