[package]
name = "tint-recorder-scenes"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
description = "Tint-specific scene helpers, contracts, and pipeline orchestration for tint-recorder."
repository = "https://github.com/corygabrielsen/tint-recorder"
publish = false

[lints.clippy]
pedantic = { level = "deny", priority = -1 }

[lib]
name = "tint_recorder_scenes"
path = "src/lib.rs"

# Scene binaries. Each one drives a recorded sequence using the
# tint_recorder library. Custom path because they live under scenes/
# rather than src/bin/ to make the scene set discoverable at a glance.
[[bin]]
name = "smoke"
path = "scenes/smoke.rs"

[[bin]]
name = "demo_full"
path = "scenes/demo_full.rs"

[[bin]]
name = "picker"
path = "scenes/picker.rs"

[[bin]]
name = "picker_timeline"
path = "scenes/picker_timeline.rs"

[[bin]]
name = "cli"
path = "scenes/cli.rs"

[[bin]]
name = "cd_hook"
path = "scenes/cd_hook.rs"

[[bin]]
name = "custom_theme"
path = "scenes/custom_theme.rs"

[[bin]]
name = "bench_tiny"
path = "scenes/bench_tiny.rs"

[[bin]]
name = "bench_churn"
path = "scenes/bench_churn.rs"

[[bin]]
name = "bench_subloops"
path = "scenes/bench_subloops.rs"

# Pipeline test driver: characterize / bless / verify / render
# subcommands. Tint-coupled because validate_scene knows the scene set.
[[bin]]
name = "pipeline-test"
path = "src/bin/pipeline_test.rs"

# Per-scene contract verifier (looks scenes up in the tint contract
# registry).
[[bin]]
name = "verify"
path = "src/bin/verify.rs"

# Recorder leg perf benchmark — drives tint-specific scene helpers.
[[bin]]
name = "recorder_perf"
path = "src/bin/recorder_perf.rs"

[dependencies]
tint-recorder = { path = ".." }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
