[package]
name = "ptyrecord"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Compose PTY trace capture and rendering into portable .ptyrecord bundles."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/ptyrecord"
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
ptyrender.workspace = true
ptytrace.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
