[package]
name = "ptyrender"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Render deterministic PTY traces to GIF/MP4 media and verify witnesses."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/ptyrender"
keywords.workspace = true
categories.workspace = true

[dependencies]
ab_glyph.workspace = true
anyhow.workspace = true
clap.workspace = true
image.workspace = true
ptytrace.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
vt100.workspace = true

[lints]
workspace = true
