[package]
name = "ptyroom"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Open and join shared terminal rooms backed by durable PTY traces."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/ptyroom"
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ptyrecord.workspace = true
ptyrender.workspace = true
ptytrace.workspace = true
tempfile.workspace = true

[dev-dependencies]
nix.workspace = true
serde_json.workspace = true

[lints]
workspace = true
