[package]
name = "ptyweb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Browser ↔ ptyroom WebSocket bridge. One process bridges one room."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["ws"] }
clap = { workspace = true, features = ["env"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
ptyroom.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
